some layout bug fixes

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -12,7 +12,7 @@
 
 .container {
     width: 50vw;
-    height: 95vh;
+    height: 100%;
     margin: 10px auto;
     background: #E5E5E5;
     border: 2px solid #1B83E2;
